wisdom-api/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisdom-api-deployment
  namespace: wisdom
  labels:
    app: wisdom-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisdom-api
  template:
    metadata: 
      labels:
        app: wisdom-api
    spec:
      containers:
        - name: wisdom-api
          image: wisdom-api:0.0.1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
